--- a/404.html
+++ b/404.html
@@ -75,7 +75,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "url": "https://lillatoma.com/",
+      "url": "lillatoma.com/",
       "inLanguage": "en",
       "name": "Lilla Toma",
       "description": "",
@@ -88,7 +88,7 @@
 
 
 
-<link rel="stylesheet" href="https://lillatoma.com/css/main.min.b150cc6f81019af72a304bebc491926a4a3823722366ae014ef294070cdb615e.css" integrity="sha256-sVDMb4EBmvcqMEvrxJGSako4I3IjZq4BTvKUBwzbYV4=" crossorigin="anonymous">
+<link rel="stylesheet" href="lillatoma.com/css/main.min.b150cc6f81019af72a304bebc491926a4a3823722366ae014ef294070cdb615e.css" integrity="sha256-sVDMb4EBmvcqMEvrxJGSako4I3IjZq4BTvKUBwzbYV4=" crossorigin="anonymous">
 
 
 
@@ -103,16 +103,16 @@
   
 
   
-  <link rel="stylesheet" href="https://lillatoma.com/css/noscript.min.c63aa197c1cdbb9146936f72b208955bb7257979da77fce3911555309716908d.css" integrity="sha256-xjqhl8HNu5FGk29ysgiVW7cleXnad/zjkRVVMJcWkI0=" crossorigin="anonymous">
+  <link rel="stylesheet" href="lillatoma.com/css/noscript.min.c63aa197c1cdbb9146936f72b208955bb7257979da77fce3911555309716908d.css" integrity="sha256-xjqhl8HNu5FGk29ysgiVW7cleXnad/zjkRVVMJcWkI0=" crossorigin="anonymous">
 
 </noscript>
 
 
 
-<link rel="preload" href="/fonts/open-sans-v34-latin-700.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="/fonts/open-sans-v34-latin-italic.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="/fonts/open-sans-v34-latin-regular.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="/fonts/oswald-v29-latin-700.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="lillatoma.com/fonts/open-sans-v34-latin-700.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="lillatoma.com/fonts/open-sans-v34-latin-italic.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="lillatoma.com/fonts/open-sans-v34-latin-regular.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="lillatoma.com/fonts/oswald-v29-latin-700.woff2" as="font" crossorigin="anonymous">
 
 
 
@@ -130,7 +130,7 @@
   
 
 
-<script src="https://lillatoma.com/js/main.e825f7044baffdc7a30a63e6a25f9fb77c953bb2609eb106c059c15274e099a5.js" integrity="sha256-6CX3BEuv/cejCmPmol&#43;ft3yVO7JgnrEGwFnBUnTgmaU=" crossorigin="anonymous"></script>
+<script src="lillatoma.com/js/main.e825f7044baffdc7a30a63e6a25f9fb77c953bb2609eb106c059c15274e099a5.js" integrity="sha256-6CX3BEuv/cejCmPmol&#43;ft3yVO7JgnrEGwFnBUnTgmaU=" crossorigin="anonymous"></script>
 
   </head>
 
@@ -139,7 +139,7 @@
     <header>
       
 
-  <a href="/">Lilla Toma</a>
+  <a href="/lillatoma.com">Lilla Toma</a>
 
 
 
@@ -181,7 +181,7 @@
 
 
 <div class="req-js">
-  <button class="outline-dashed" title="Change to light/dark mode."><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><use xlink:href="/img/bundle.min.ae45e7a9a0a65150dd900a58f35fe84d.svg#adjust"/></svg></button><input class="outline-dashed" type="color" list="presets" value="1f676b" title="Change accent color." aria-label="Change accent color."><datalist id="presets"><option value="1f676b"><option value="1dbc91"></datalist>
+  <button class="outline-dashed" title="Change to light/dark mode."><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><use xlink:href="lillatoma.com/img/bundle.min.ae45e7a9a0a65150dd900a58f35fe84d.svg#adjust"/></svg></button><input class="outline-dashed" type="color" list="presets" value="1f676b" title="Change accent color." aria-label="Change accent color."><datalist id="presets"><option value="1f676b"><option value="1dbc91"></datalist>
 </div>
 
 
