--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <meta property="og:site_name" content="Lilla Toma">
 <meta property="og:title" content="Welcome to my website">
 
-  <meta property="og:url" content="http://localhost:1313/">
+  <meta property="og:url" content="//localhost:1313/">
 
 
 
@@ -55,7 +55,7 @@
 
 
 
-  <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="Lilla Toma">
+  <link rel="alternate" type="application/rss+xml" href="//localhost:1313/index.xml" title="Lilla Toma">
 
 
 
@@ -79,7 +79,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "url": "http://localhost:1313/",
+      "url": "//localhost:1313/",
       "inLanguage": "en",
       "name": "Lilla Toma",
       "description": "",
@@ -92,7 +92,7 @@
 
 
 
-<link rel="stylesheet" href="http://localhost:1313/css/main.min.f2375c2734b0bce7a2d51026d9ca7ecb9711b3ed38e3750555890898a9e4f26a.css" integrity="sha256-8jdcJzSwvOei1RAm2cp&#43;y5cRs&#43;0443UFVYkImKnk8mo=" crossorigin="anonymous">
+<link rel="stylesheet" href="//localhost:1313/css/main.min.f2375c2734b0bce7a2d51026d9ca7ecb9711b3ed38e3750555890898a9e4f26a.css" integrity="sha256-8jdcJzSwvOei1RAm2cp&#43;y5cRs&#43;0443UFVYkImKnk8mo=" crossorigin="anonymous">
 
 
 
@@ -107,7 +107,7 @@
   
 
   
-  <link rel="stylesheet" href="http://localhost:1313/css/noscript.min.c63aa197c1cdbb9146936f72b208955bb7257979da77fce3911555309716908d.css" integrity="sha256-xjqhl8HNu5FGk29ysgiVW7cleXnad/zjkRVVMJcWkI0=" crossorigin="anonymous">
+  <link rel="stylesheet" href="//localhost:1313/css/noscript.min.c63aa197c1cdbb9146936f72b208955bb7257979da77fce3911555309716908d.css" integrity="sha256-xjqhl8HNu5FGk29ysgiVW7cleXnad/zjkRVVMJcWkI0=" crossorigin="anonymous">
 
 </noscript>
 
@@ -134,7 +134,7 @@
   
 
 
-<script src="http://localhost:1313/js/main.16971f9a4005ca06f9ed1f3f1aaa086c77598d241bbeaaf12af356e141870395.js" integrity="sha256-FpcfmkAFygb57R8/GqoIbHdZjSQbvqrxKvNW4UGHA5U=" crossorigin="anonymous"></script>
+<script src="//localhost:1313/js/main.16971f9a4005ca06f9ed1f3f1aaa086c77598d241bbeaaf12af356e141870395.js" integrity="sha256-FpcfmkAFygb57R8/GqoIbHdZjSQbvqrxKvNW4UGHA5U=" crossorigin="anonymous"></script>
 
   </head>
 
@@ -143,7 +143,7 @@
     <header>
       
 
-  <a href="/">Lilla Toma</a>
+  <a href="//localhost:1313/">Lilla Toma</a>
 
 
 
