--- a/public/projects/travianer/index.html
+++ b/public/projects/travianer/index.html
@@ -103,7 +103,7 @@
       "inLanguage": "en",
       "datePublished": "2024-07-13",
       "dateModified": "2024-07-13",
-      "wordCount" : "33",
+      "wordCount" : "36",
       "publisher": {
         "@type": "Person",
         "name": ""
@@ -273,15 +273,15 @@
         </div>
         <div id="-unity-footer" class="unity-footer">
             <div id="-unity-fullscreen-button" class="unity-fullscreen-button"></div>
-            <div id="-unity-game-title" class="unity-game-title">My cool game</div>
+            <div id="-unity-game-title" class="unity-game-title">Travianer - A singleplayer Travian experience</div>
         </div>
         <script>
             var buildUrl = "Travianer\/Build";
             var loaderUrl = buildUrl + "/BuildWebGL.loader.js";
             var config = {
-                dataUrl: buildUrl + "/BuildWebGL.data.br",
-                frameworkUrl: buildUrl + "/BuildWebGL.framework.js.br",
-                codeUrl: buildUrl + "/BuildWebGL.wasm.br",
+                dataUrl: buildUrl + "/BuildWebGL.data",
+                frameworkUrl: buildUrl + "/BuildWebGL.framework.js",
+                codeUrl: buildUrl + "/BuildWebGL.wasm",
                 streamingAssetsUrl: "StreamingAssets",
             };
 
