earn that bread game added

--- a/public/projects/travianer/index.html
+++ b/public/projects/travianer/index.html
@@ -103,7 +103,7 @@
       "inLanguage": "en",
       "datePublished": "2024-07-15",
       "dateModified": "2024-07-15",
-      "wordCount" : "2948",
+      "wordCount" : "2969",
       "publisher": {
         "@type": "Person",
         "name": ""
@@ -258,8 +258,9 @@
 
 <p>This is a <strong>Unity game project</strong> made with Unity 2022.3.13f1. This project was done with the collaboration of Viktória Horváth, who helped in many graphical, and coding assets of the project.
 The project is based on the web browser, war strategy game, Travian by Travian Games GmbH. Assets are reused from the original Travian project, and we do not own any of them. They are the intellectual property of Travian Games GmbH.
-The game was originally made for PC, and this WebGL version below is not optimized, and some assets might have different scaling because of it. I recommend playing it in 1920x1080 fullscreen.
-Note: all other players in the game are controlled by bots.</p>
+The game was originally made for PC, and this WebGL version below is not optimized, and some assets might have different scaling because of it. I recommend playing it in 1920x1080 fullscreen.</p>
+<p><strong>Note</strong>: all other players in the game are controlled by bots.</p>
+<p><strong>Note</strong>: If you choose full screen, you might have to click again in the game screen for it to take effect.</p>
 <div class="webgl-player">
     <div id="-unity-browser-width-warning" class="unity-browser-width-warning">
         This content does not resize on smaller browser widths. Try using the fullscreen button below (after loading the game).
